Solved checkstyle